# Optimization

./: .gitignore  Linear Programming and Hennig-Olsen.ipynb  Piecewise Linear Approximation.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
Network Models using Linear Programming/: 01 - The Transportation Problem.ipynb  02 - The Assignment Problem.ipynb  03 - The Transshipment Problem.ipynb  04 - The Maximal Flow Problem.ipynb  05 - Minimal Spanning Three.ipynb  readme.md
OMLT/: 01_generate_synthetic_dataset.ipynb  02_train_model.ipynb  03_verify_model_output.ipynb  base_score  data.csv  model.onnx  model.pkl  slettmeg.ipynb
OMLT ferry schedule/: graphics.pptx  opt_formulation.ipynb  opt_formulation_advaced.ipynb
