[tool.poetry]
name = "optimization"
version = "0.1.0"
description = ""
authors = ["Viggo T. Wivestad <VTW@equinor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
omlt = "^1.0"
PuLP = "^2.6.0"
sklearn = "^0.0"
onnx = "^1.11.0"
ipykernel = "^6.14.0"
skl2onnx = "^1.11.2"
protobuf = "3.20.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
